--- a/docplan.html
+++ b/docplan.html
@@ -176,5 +176,115 @@
         </div>
       </div>
     </section>
+    <nav class="offices">
+      <div class="office">
+        <h1>Improve the lives of millions. Change yours forever.</h1>
+        <p>
+          More than 2800 team mates share our same vision, goals and passion.
+          With offices in Warsaw, Barcelona, Munich, Istanbul, Rome, Rio,
+          Bologna, Mexico City and Curitiba, our search for great talent never
+          stops.
+        </p>
+      </div>
+      <div class="sliderfotos">
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="foto1">
+          <img src="./images/warsaw.png" />
+          <div class="ESPACE">
+            <div class="but">
+              warsaw
+              <button class="button">see opening</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <footer class="tofooter">
+      <h1>Sounds interesting? Join us now!</h1>
+      <button>
+        <a href="see all currents openings" class="btn"></a>see all currents
+        openings
+      </button>
+      <p>
+        We are leaders in 13 countries: Poland, Turkey, Spain, Italy, Germany,
+        Czech Republic, Portugal, Mexico, Colombia, Brazil, Argentina, Peru and
+        Chile This site uses cookies to deliver services in accordance with this
+        Privacy Policy. You can specify the conditions for storing or accessing
+        cookies on your browser. www.docplanner.com © 2023
+      </p>
+    </footer>
   </body>
 </html>
